--type=osgi related modified files